# enpm702-fall-2025-ROS

Lecture10/first_package/: CMakeLists.txt  package.xml
Lecture10/first_package/src/: main.cpp
Lecture10/publisher_demo/include/publisher_demo/: publisher_demo.hpp
Lecture10/publisher_demo/src/: publisher_demo.cpp
Lecture10/subscriber_demo/include/subscriber_demo/: subscriber_demo.hpp
Lecture10/subscriber_demo/src/: subscriber_demo.cpp
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  overview.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree  overview.doctree
docs/_build/html/.doctrees/lecture10/: exercises.doctree  first_node.doctree  lecture10.doctree  messages.doctree  node_spinning.doctree  publishers.doctree  ros2_fundamentals.doctree  subscribers.doctree  workspace_and_devenv.doctree
docs/_build/html/_sources/lecture10/: lecture10.rst.txt  node_spinning.rst.txt  subscribers.rst.txt  workspace_and_devenv.rst.txt
docs/_build/html/lecture10/: exercises.html  first_node.html  lecture10.html  messages.html  node_spinning.html  publishers.html  ros2_fundamentals.html  subscribers.html  workspace_and_devenv.html
docs/source/: index.rst  overview.rst
docs/source/lecture10/: exercises.rst  first_node.rst  lecture.rst  lecture10.rst  messages.rst  publishers.rst  ros2_fundamentals.rst
final_starter/micromouse_cpp/: CMakeLists.txt  package.xml
final_starter/micromouse_cpp/config/: params.yaml
final_starter/micromouse_cpp/include/micromouse_cpp/: get_status_client.hpp  maze_control_api.hpp  navigate_action_client.hpp
final_starter/micromouse_cpp/src/: get_status_client.cpp  maze_control_api.cpp  micromouse_node.cpp  navigate_action_client.cpp
